[gd_scene load_steps=8 format=2]

[ext_resource path="res://Classes/Character.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/ninja_m.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 18 )

[sub_resource type="Animation" id=2]

resource_name = "down"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 6, 7 ]
}

[sub_resource type="Animation" id=3]

resource_name = "left"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 9, 10 ]
}

[sub_resource type="Animation" id=4]

resource_name = "right"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 3, 4 ]
}

[sub_resource type="Animation" id=5]

resource_name = "up"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0, 1 ]
}

[node name="Character" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 4
_sections_unfolded = [ "Animation", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 0, 2.09686 )
shape = SubResource( 1 )

[node name="MoveTween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/down = SubResource( 2 )
anims/left = SubResource( 3 )
anims/right = SubResource( 4 )
anims/up = SubResource( 5 )
blend_times = [  ]

[node name="RayCastLeft" type="RayCast2D" parent="." index="4"]

enabled = true
exclude_parent = true
cast_to = Vector2( -32, 0 )
collision_mask = 1

[node name="RayCastUp" type="RayCast2D" parent="." index="5"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, -32 )
collision_mask = 1

[node name="RayCastDown" type="RayCast2D" parent="." index="6"]

enabled = true
exclude_parent = true
cast_to = Vector2( 0, 32 )
collision_mask = 1

[node name="RayCastRight" type="RayCast2D" parent="." index="7"]

enabled = true
exclude_parent = true
cast_to = Vector2( 32, 0 )
collision_mask = 1

[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]


